--- a/002_css_assignment/drawer/style.css
+++ b/002_css_assignment/drawer/style.css
@@ -16,6 +16,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Roboto, sans-serif;
+    overflow: hidden;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -53,10 +54,11 @@ p{
 .drawer__container{
     height: 100%;
     border-right: 2px solid grey;
+   
 }
 
 .drawer__nav{
-    overflow-y: scroll;   
+    overflow-y: auto;   
     height: 100%;
 }
 
