--- a/002_css_assignment/chips/chips.css
+++ b/002_css_assignment/chips/chips.css
@@ -1,40 +1,5 @@
-/* outline for all the elements for development only */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+@import url('../style.css');
 
-/* *{
-    outline: 1px solid red;
-} */
-
-:root{
-    --var-color-primary: #3f51b5;
-    --var-color-accent: #ff4081;
-    --var-color-warn: #f44336;
-    --var-color-primary-dark: #25327a;
-    --var-text-color-secondary: rgba(0,0,0,0.54);
-    --var-text-color-border: rgba(0,0,0,0.2);
-    --var-chip-background: #e0e0e0;
-    --var-chip-background-dark: rgb(194, 194, 194);
-}
-
-/* Reset */
-
-html,body{
-    margin: 1rem;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Roboto, sans-serif;
-}
-
-h2,h3{
-    margin: 0;
-}
-
-.container{
-    border: 2px solid var(--var-text-color-border);
-    padding: 1rem;
-    border-radius: 0.4rem;
-    margin: 1rem;
-}
 
 .chips__container{
     display: flex;
@@ -101,4 +66,18 @@ h2,h3{
     text-align: center;
     border-radius: 50%;
     cursor: pointer;
+}
+
+
+/* Chips Stacked */
+
+
+.chips__container--stacked{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.chip__stacked{
+    max-width: 200px;
 }
