chore: files restructure

--- a/002_css_assignment/components/examples/badges.html
+++ b/002_css_assignment/components/examples/badges.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="badges.css">
+    <link rel="stylesheet" href="../../style.css">
     <title>Badges</title>
 </head>
 
@@ -14,7 +14,7 @@
     <main>
         <section class="container">
             <h3 class="container__title">Badge Overview</h3>
-            <div>
+            <div class="flex__column">
                 <p class="label">Text with a badge <span class="badge badge__right">4</span></p>
                 <p class="label">Text with large badge <span class="badge badge__right badge__large">4</span></p>
                 <p class="label">button with badge on the left <button class="label button__primary">Action <span
