--- a/002_css_assignment/components/examples/standard_header.html
+++ b/002_css_assignment/components/examples/standard_header.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../../style.css">
 
     <title>Headers</title>
 </head>
@@ -17,12 +14,12 @@
 
     <main>
         <section>
-            <header class="header header__fixed">
+            <header class="header">
                 <div class="header__container">
                     <button class="menu header__action">
                         <i class="fas fa-bars"></i>
                     </button>
-                    <h1 class="header__title">Fixed</h1>
+                    <h1 class="header__title">Standard</h1>
                     <button class="download header__action">
                         <i class="fas fa-download"></i>
                     </button>
