--- a/002_css_assignment/components/examples/tabs.html
+++ b/002_css_assignment/components/examples/tabs.html
@@ -5,12 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="tabs.css">
-
+    <link rel="stylesheet" href="../../style.css">
     <title>Tabs</title>
 </head>
 
@@ -39,7 +34,7 @@
 
         <!-- Leading Icons tab -->
         <div class="container container__bg">
-        
+
             <div class="tabs__container flex__row--center">
                 <div class="tab__container tab__container--active">
                     <i class="fas fa-clock tab__title--active"></i>
@@ -54,12 +49,12 @@
                     <h3 class="tab__title">Tab Three</h3>
                 </div>
             </div>
-        
+
         </div>
 
         <!-- Top Icons tab -->
         <div class="container container__bg">
-        
+
             <div class="tabs__container flex__row--center">
                 <div class="tab__container tab__container--column tab__container--active">
                     <i class="fas fa-clock tab__title--active"></i>
@@ -74,7 +69,7 @@
                     <h3 class="tab__title">Tab Three</h3>
                 </div>
             </div>
-        
+
         </div>
     </main>
 
