--- a/002_css_assignment/components/styles/header.css
+++ b/002_css_assignment/components/styles/header.css
@@ -1,7 +1,3 @@
-@import url('../style.css');
-
-
-
 /* General */
 
 p{
@@ -9,10 +5,10 @@ p{
     padding: 0.5rem;
 }
 
-.container{
+/* .container{
     height: 15rem;
     margin-bottom: 2rem;
-}
+} */
 
 
 header{
