refactor: fixing broken styles

--- a/002_css_assignment/components/examples/cards.html
+++ b/002_css_assignment/components/examples/cards.html
@@ -20,24 +20,24 @@
 
             <div class="flex__row">
 
-
-
-                <div class="card__1">
+                <div class="card">
                     <img class="img__bg" src="../../assets/background.jpeg" alt="lake">
-                    <!-- <div class="info__container"> -->
+
                     <div class="info__primary">
-                        <h2 class="title">Our Changing Planet</h2>
-                        <h3 class="subtitle">by Shivam Pandey</h3>
+                        <h2 class="card__title">Our Changing Planet</h2>
+                        <h3 class="card__subtitle">by Shivam Pandey</h3>
                     </div>
 
                     <div class="info__secondary">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, beatae?
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, beatae?
+                        </p>
                     </div>
-                    <!-- </div> -->
+
                     <div class="card__actions">
                         <div class="action__buttons">
-                            <button class="btn">READ</button>
-                            <button class="btn">BOOKMARK</button>
+                            <button class="button__flat card__button">READ</button>
+                            <button class="button__flat card__button">BOOKMARK</button>
                         </div>
                         <div class="action__icons">
                             <i class="far fa-heart icon"></i>
@@ -45,31 +45,34 @@
                             <i class="fas fa-ellipsis-v icon"></i>
                         </div>
                     </div>
+
                 </div>
 
 
                 <!-- Card 2 -->
 
 
-                <div class="card__2">
+                <div class="card position-relative">
                     <img class="img__bg" src="../../assets/background.jpeg" alt="lake">
-                    <div class="info__primary-2">
-                        <h2 class="title-2">Our Changing Planet</h2>
-                        <h3 class="subtitle-2">by Shivam Pandey</h3>
+                    <div class="info__primary position-absolute top-40">
+                        <h2 class="card__title text-white">Our Changing Planet</h2>
+                        <h3 class="card__subtitle text-white">by Shivam Pandey</h3>
                     </div>
 
-                    <div class="info__secondary-2">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, beatae?
+                    <div class="info__secondary">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, beatae?
+                        </p>
                     </div>
-                    <div class="card__actions-2">
-                        <div class="action__buttons-2">
-                            <button class="btn-2">READ</button>
-                            <button class="btn-2">BOOKMARK</button>
+                    <div class="card__actions">
+                        <div class="action__buttons">
+                            <button class="button__flat card__button">READ</button>
+                            <button class="button__flat card__button">BOOKMARK</button>
                         </div>
-                        <div class="action__icons-2">
-                            <i class="far fa-heart icon-2"></i>
-                            <i class="fas fa-share-alt icon-2"></i>
-                            <i class="fas fa-ellipsis-v icon-2"></i>
+                        <div class="action__icons">
+                            <i class="far fa-heart icon"></i>
+                            <i class="fas fa-share-alt icon"></i>
+                            <i class="fas fa-ellipsis-v icon"></i>
                         </div>
                     </div>
                 </div>
@@ -78,27 +81,27 @@
                 <!-- Card 3 -->
 
 
-                <div class="card__3">
-                    <img class="img__bg-3" src="../../assets/background.jpeg" alt="lake">
-                    <!-- <div class="info__container"> -->
-                    <div class="info__primary-3">
-                        <h2 class="title-3">Our Changing Planet</h2>
-                        <h3 class="subtitle-3">by Shivam Pandey</h3>
+                <div class="card flex__column">
+                    <img class="img__bg order-1" src="../../assets/background.jpeg" alt="lake">
+                    <div class="info__primary order-0">
+                        <h2 class="card__title">Our Changing Planet</h2>
+                        <h3 class="card__subtitle">by Shivam Pandey</h3>
                     </div>
 
-                    <div class="info__secondary-3">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, beatae?
+                    <div class="info__secondary order-2">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, beatae?
+                        </p>
                     </div>
-                    <!-- </div> -->
-                    <div class="card__actions-3">
-                        <div class="action__buttons-3">
-                            <button class="btn-3">READ</button>
-                            <button class="btn-3">BOOKMARK</button>
+                    <div class="card__actions order-3">
+                        <div class="action__buttons">
+                            <button class="button__flat card__button">READ</button>
+                            <button class="button__flat card__button">BOOKMARK</button>
                         </div>
-                        <div class="action__icons-3">
-                            <i class="far fa-heart icon-3"></i>
-                            <i class="fas fa-share-alt icon-3"></i>
-                            <i class="fas fa-ellipsis-v icon-3"></i>
+                        <div class="action__icons">
+                            <i class="far fa-heart icon"></i>
+                            <i class="fas fa-share-alt icon"></i>
+                            <i class="fas fa-ellipsis-v icon"></i>
                         </div>
                     </div>
                 </div>
@@ -106,49 +109,53 @@
 
                 <!-- ********* card 4 ********* -->
 
-                <div class="card__1">
+                <div class="card">
                     <img class="img__bg" src="../../assets/background.jpeg" alt="lake">
-                    <!-- <div class="info__container"> -->
+
                     <div class="info__primary">
-                        <h2 class="title">Our Changing Planet</h2>
-                        <h3 class="subtitle">by Shivam Pandey</h3>
+                        <h2 class="card__title">Our Changing Planet</h2>
+                        <h3 class="card__subtitle">by Shivam Pandey</h3>
                     </div>
 
                     <div class="info__secondary">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, beatae?
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, beatae?
+                        </p>
                     </div>
-                    <!-- </div> -->
+
                     <div class="card__actions">
                         <div class="action__buttons">
-                            <button class="btn">READ</button>
-                            <button class="btn">BOOKMARK</button>
+                            <button class="button__flat card__button">READ</button>
+                            <button class="button__flat card__button">BOOKMARK</button>
                         </div>
-                        <div class="action__icons-4">
+                        <div class="action__icons hide">
                             <i class="far fa-heart icon"></i>
                             <i class="fas fa-share-alt icon"></i>
                             <i class="fas fa-ellipsis-v icon"></i>
                         </div>
                     </div>
+
                 </div>
 
                 <!-- ********* card 5 ********* -->
-
-                <div class="card__1">
+                <div class="card">
                     <img class="img__bg" src="../../assets/background.jpeg" alt="lake">
-                    <!-- <div class="info__container"> -->
+
                     <div class="info__primary">
-                        <h2 class="title">Our Changing Planet</h2>
-                        <h3 class="subtitle">by Shivam Pandey</h3>
+                        <h2 class="card__title">Our Changing Planet</h2>
+                        <h3 class="card__subtitle">by Shivam Pandey</h3>
                     </div>
 
                     <div class="info__secondary">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, beatae?
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, beatae?
+                        </p>
                     </div>
-                    <!-- </div> -->
-                    <div class="card__actions-5">
-                        <div class="action__buttons-5">
-                            <button class="btn">READ</button>
-                            <button class="btn">BOOKMARK</button>
+
+                    <div class="card__actions flex__column--end">
+                        <div class="action__buttons hide">
+                            <button class="button__flat card__button">READ</button>
+                            <button class="button__flat card__button">BOOKMARK</button>
                         </div>
                         <div class="action__icons">
                             <i class="far fa-heart icon"></i>
@@ -156,34 +163,36 @@
                             <i class="fas fa-ellipsis-v icon"></i>
                         </div>
                     </div>
+
                 </div>
 
                 <!-- ********* card 6 ********* -->
-
-                <div class="card card__6">
-                    <img class="img__bg-6" src="../../assets/background.jpeg" alt="lake">
-                    <!-- <div class="info__container"> -->
-                    <div class="info__primary info__primary-6">
-                        <h2 class="title">Our Changing Planet</h2>
-                        <h3 class="subtitle">by Shivam Pandey</h3>
-                    </div>
-
-                    <div class="info__secondary-6">
+            <div class="card flex__row">
+                <img class="img__bg order-0 width-30" src="../../assets/background.jpeg" alt="lake">
+            
+                <div class="info__primary order-1 width-60">
+                    <h2 class="card__title">Our Changing Planet</h2>
+                    <h3 class="card__subtitle">by Shivam Pandey</h3>
+                </div>
+            
+                <div class="info__secondary hide">
+                    <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, beatae?
+                    </p>
+                </div>
+            
+                <div class="card__actions width-100 order-4">
+                    <div class="action__buttons">
+                        <button class="button__flat card__button">READ</button>
+                        <button class="button__flat card__button">BOOKMARK</button>
                     </div>
-                    <!-- </div> -->
-                    <div class="card__actions card__actions-6">
-                        <div class="action__buttons">
-                            <button class="btn">READ</button>
-                            <button class="btn">BOOKMARK</button>
-                        </div>
-                        <div class="action__icons">
-                            <i class="far fa-heart icon"></i>
-                            <i class="fas fa-share-alt icon"></i>
-                            <i class="fas fa-ellipsis-v icon"></i>
-                        </div>
+                    <div class="action__icons">
+                        <i class="far fa-heart icon"></i>
+                        <i class="fas fa-share-alt icon"></i>
+                        <i class="fas fa-ellipsis-v icon"></i>
                     </div>
                 </div>
+            
             </div>
 
 
