--- a/002_css_assignment/components/examples/chips.html
+++ b/002_css_assignment/components/examples/chips.html
@@ -13,7 +13,7 @@
 
     <main>
         <section class="container">
-            <div class="title">
+            <div class="container__title">
                 Basic Chips
             </div>
             <div class="chips__container">
@@ -29,10 +29,10 @@
         </section>
 
         <section class="container">
-            <div class="title">
+            <div class="container__title">
                 Stacked Chips
             </div>
-            <div class="chips__container--stacked">
+            <div class="chips__container flex__column">
                 <div class="chip chip-selected chip__stacked">none</div>
                 <div class="chip chip-selected chip__stacked">Primary</div>
                 <div class="chip chip-selected chip__stacked chip__accent">Accent</div>
@@ -41,7 +41,7 @@
         </section>
 
         <section class="container">
-            <div class="title">
+            <div class="container__title">
                 Chips with action
             </div>
             <div class="chips__container">
