--- a/002_css_assignment/components/examples/drawer.html
+++ b/002_css_assignment/components/examples/drawer.html
@@ -13,82 +13,112 @@
 <body>
 
     <main>
-        <section class="container">
-            <aside class="drawer__container">
-                <div class="drawer__header">
-                    <h3>Awesome App</h3>
-                    <span>email@examle.com</span>
-                </div>
-                <div class="drawer__nav">
-                    <nav class="nav__list">
-                        <ul>
-
-                            <li class="nav__list-item">
-
-                                <a href="#" class="nav__list-item"><i class="fas fa-inbox"></i>Inbox</a>
-                            </li>
-
-
-                            <li class="nav__list-item">
-
-                                <a href="#" class="nav__list-item"><i class="fas fa-star"></i>Starred</a>
-                            </li>
-                            <li class="nav__list-item">
-
-                                <a href="#" class="nav__list-item"><i class="fas fa-paper-plane"></i>Sent</a>
-                            </li>
-                            <li class="nav__list-item">
-
-                                <a href="#" class="nav__list-item"><i class="fas fa-envelope"></i>Drafts</a>
-                            </li>
-                            <hr class="list__divider" />
-                            <h6 class="drawer__subheader">Labels</h6>
-                            <li class="nav__list-item">
-
-                                <a href="#" class="nav__list-item"><i class="fas fa-user-group"></i>Family</a>
-                            </li>
-                            <li class="nav__list-item">
-
-                                <a href="#" class="nav__list-item"><i class="fas fa-user-friends"></i>Friends</a>
-                            </li>
-                            <li class="nav__list-item">
-
-                                <a href="#" class="nav__list-item"><i class="fas fa-institution"></i>Work</a>
-                            </li>
-                            <hr class="list__divider" />
-                            <li class="nav__list-item">
-
-                                <a href="#" class="nav__list-item"><i class="fas fa-gear"></i>Settings</a>
-                            </li>
-                            <li class="nav__list-item">
-
-                                <a href="#" class="nav__list-item"><i class="fas fa-hands-helping"></i>Help</a>
-                            </li>
-                            
-                        </ul>
-                    </nav>
-                </div>
-
-            </aside>
-            <div class="content__section">
-                <header class="content__header">
-                    <h2>Permanent Drawer</h2>
+        <!-- <section class="container container__bg"> -->
+        <div class="drawer__container">
+            <aside class="drawer">
+                <header class="drawer__header">
+                    <h3 class="drawer__title">Awesome App</h3>
+                    <small class="drawer__subtitle">email@examle.com</small>
                 </header>
-                <p class="content">
+                <!-- <div class="drawer__nav"> -->
+                <nav class="drawer__list flex__column">
+                    <ul>
+                        <li class="nav__list-item">
+                            <a href="#" class="nav__list-item"><i class="fas fa-inbox"></i>Inbox</a>
+                        </li>
+
+                        <li class="nav__list-item">
+                            <a href="#" class="nav__list-item"><i class="fas fa-star"></i>Starred</a>
+                        </li>
+
+                        <li class="nav__list-item">
+                            <a href="#" class="nav__list-item"><i class="fas fa-paper-plane"></i>Sent</a>
+                        </li>
+
+                        <li class="nav__list-item">
+                            <a href="#" class="nav__list-item"><i class="fas fa-envelope"></i>Drafts</a>
+                        </li>
+                        
+                        <hr class="list__divider" />
+                        <h6 class="drawer__label">Labels</h6>
+
+                        <li class="nav__list-item">
+                            <a href="#" class="nav__list-item"><i class="fas fa-user-friends"></i>Family</a>
+                        </li>
+
+                        <li class="nav__list-item">
+                            <a href="#" class="nav__list-item"><i class="fas fa-user-friends"></i>Friends</a>
+                        </li>
+
+                        <li class="nav__list-item">
+                            <a href="#" class="nav__list-item"><i class="fas fa-briefcase"></i>Work</a>
+                        </li>
+
+                        <hr class="list__divider" />
+
+                        <li class="nav__list-item">
+                            <a href="#" class="nav__list-item"><i class="fas fa-cog"></i>Settings</a>
+                        </li>
+
+                        <li class="nav__list-item">
+                            <a href="#" class="nav__list-item"><i class="fas fa-hands-helping"></i>Help</a>
+                        </li>
+
+                    </ul>
+                </nav>
+                <!-- </div> -->
+            </aside>
+
+            <div class="content__section">
+                <h2 class="content__header">Permanent Drawer</h2>
+
+                <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam tempora vitae perferendis eum ad
                     doloremque, voluptatem dolor vel exercitationem facere reprehenderit consectetur illo eveniet
                     repellendus tempore nobis voluptatum. Itaque quod laborum possimus adipisci aut ea at provident
                     aspernatur? Quisquam exercitationem repudiandae deleniti perferendis accusantium iste dolores
                     pariatur maiores, magni totam aspernatur omnis voluptates ullam ipsum! Error dolorum facilis
-                    reprehenderit porro sequi sunt nobis totam rerum, fuga accusantium cumque laborum iste suscipit sed
-                    temporibus! Sint maxime, esse a hic distinctio possimus in ex odio quasi soluta ea voluptas maiores
+                    reprehenderit porro sequi sunt nobis totam rerum, fuga accusantium cumque laborum iste suscipit
+                    sed
+                    temporibus! Sint maxime, esse a hic distinctio possimus in ex odio quasi soluta ea voluptas
+                    maiores
+                    quas odit veniam ducimus quaerat quae molestias? Ducimus ex consequuntur delectus atque!
+                </p>
+                <br>
+                <p>
+
+
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam tempora vitae perferendis eum ad
+                    doloremque, voluptatem dolor vel exercitationem facere reprehenderit consectetur illo eveniet
+                    repellendus tempore nobis voluptatum. Itaque quod laborum possimus adipisci aut ea at provident
+                    aspernatur? Quisquam exercitationem repudiandae deleniti perferendis accusantium iste dolores
+                    pariatur maiores, magni totam aspernatur omnis voluptates ullam ipsum! Error dolorum facilis
+                    reprehenderit porro sequi sunt nobis totam rerum, fuga accusantium cumque laborum iste suscipit
+                    sed
+                    temporibus! Sint maxime, esse a hic distinctio possimus in ex odio quasi soluta ea voluptas
+                    maiores
+                    quas odit veniam ducimus quaerat quae molestias? Ducimus ex consequuntur delectus atque!
+                </p>
+                <br>
+                <p>
+
+
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam tempora vitae perferendis eum ad
+                    doloremque, voluptatem dolor vel exercitationem facere reprehenderit consectetur illo eveniet
+                    repellendus tempore nobis voluptatum. Itaque quod laborum possimus adipisci aut ea at provident
+                    aspernatur? Quisquam exercitationem repudiandae deleniti perferendis accusantium iste dolores
+                    pariatur maiores, magni totam aspernatur omnis voluptates ullam ipsum! Error dolorum facilis
+                    reprehenderit porro sequi sunt nobis totam rerum, fuga accusantium cumque laborum iste suscipit
+                    sed
+                    temporibus! Sint maxime, esse a hic distinctio possimus in ex odio quasi soluta ea voluptas
+                    maiores
                     quas odit veniam ducimus quaerat quae molestias? Ducimus ex consequuntur delectus atque!
                 </p>
 
-
             </div>
+        </div>
 
-        </section>
+        <!-- </section> -->
     </main>
 
 </body>
