--- a/002_css_assignment/components/styles/chips.css
+++ b/002_css_assignment/components/styles/chips.css
@@ -5,9 +5,6 @@
     gap: 0.5rem;
 }
 
-.title{
-    margin: 1rem 0;
-}
 
 .chip{
     background-color: var(--var-chip-background);
@@ -52,7 +49,7 @@
 }
 
 .action__chip{
-    display: inline-flex;
+    display: flex;
     gap: 0.5rem;
     align-content: center;
 }
@@ -61,20 +58,11 @@
     border: none;
     background-color: rgb(160, 160, 160);
     color: rgb(255, 251, 251);
-    text-align: center;
     border-radius: 50%;
     cursor: pointer;
+    width: 1rem;
 }
 
-
-/* Chips Stacked */
-
-
-.chips__container--stacked{
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-}
 
 .chip__stacked{
     max-width: 200px;
